--- a/src/pages/contacto.astro
+++ b/src/pages/contacto.astro
@@ -3,7 +3,10 @@ import Phone from "../components/icons/Phone.icon.astro";
 import Layout from "../layouts/Layout.astro";
 ---
 
-<Layout title="Contacto">
+<Layout
+  title="Contacto"
+  description="Pagian de contacto para obtener mas informacion del servicio de nominas pymes"
+>
   <div class="container mx-auto bg-white-bg rounded shadow-lg">
     <div class="absolute mt-14 ml-16 font-secondary">
       <a type="button" href="/"> Regresar </a>
