adding meta descriptions

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -12,8 +12,7 @@ import Hero from "../components/Hero.astro";
 
 <Layout
   title="Nomina Pymes"
-  description="Maquila de Nómina es el servicio que te permite contar con profesionistas especializados en el cálculo de la nómina, la determinación de impuestos y los derivados de ella, con la confianza que la información que se le proporciona en veraz y oportuna."
-  
+  description="Expertos en nómina: cálculo preciso, determinación de impuestos y asesoría especializada. ¡Optimiza tu negocio con información veraz y oportuna! "
 >
   <Hero />
   <Services />
