--- a/src/pages/contacto.astro
+++ b/src/pages/contacto.astro
@@ -5,7 +5,7 @@ import Layout from "../layouts/Layout.astro";
 
 <Layout
   title="Contacto"
-  description="Pagian de contacto para obtener mas informacion del servicio de nominas pymes"
+  description="Contáctanos para obtener asesoría experta en nómina, cálculo de impuestos y más. Estamos aquí para ayudarte a optimizar tu negocio con soluciones personalizadas"
 >
   <div class="container mx-auto bg-white-bg rounded shadow-lg">
     <div class="absolute mt-14 ml-16 font-secondary">
