--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -17,6 +17,13 @@ const { title, description, canonical } = Astro.props;
 			title={title}
 			description={description}
 			canonical={canonical}
+			openGraph={{
+				basic: {
+					title,
+					type: 'website',
+					image: ''
+				}
+			}}
 		/>
 		<meta charset="UTF-8" />
 		<meta name="description" content="Astro description" />
