--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -11,8 +11,8 @@ import Hero from "../components/Hero.astro";
 ---
 
 <Layout
-  title="Nomina Pymes"
-  description="Expertos en nómina: cálculo preciso, determinación de impuestos y asesoría especializada. ¡Optimiza tu negocio con información veraz y oportuna! "
+  title="Nómina Pymes: Gestiona tus empleados de forma fácil y eficiente"
+  description="Expertos en Nómina Pymes: Cálculo preciso, determinación de impuestos y asesoría especializada. ¡Optimiza tu negocio con información veraz y oportuna!"
 >
   <Hero />
   <Services />
