--- a/src/components/RequirementsCards.astro
+++ b/src/components/RequirementsCards.astro
@@ -34,7 +34,7 @@ import Folder from "./icons/Folder.icon.astro";
     </div>
     <p>
       Los montos de salario son determinados por el cliente para el cálculo. Se
-      ofrece asesoría sie s necesario.
+      ofrece asesoría si es necesario.
     </p>
   </div>
   <div class="bg-white-bg p-5 mb-10 shadow-lg rounded-lg w-96 h-[220px]">
@@ -58,7 +58,7 @@ import Folder from "./icons/Folder.icon.astro";
       <Folder />
     </div>
     <p>
-      Entregar información de los trabajadores para el calculo de su nómina.
+      Entregar información de los trabajadores para el cálculo de su nómina.
     </p>
   </div>
 </div>
