--- a/src/pages/contacto.astro
+++ b/src/pages/contacto.astro
@@ -25,7 +25,7 @@ import Layout from "../layouts/Layout.astro";
         <p class="pl-5 my-7">Nancy Garza</p>
         <p class="pl-5 mb-7">nominapymes@gmail.com</p>
         <p class="pl-5 mb-7">@nominaspymes</p>
-        <p class="pl-5 mb-7">+52 81-13-26-72-51</p>
+        <p class="pl-5 mb-7">+52 811326-7251</p>
       </div>
       <div class="flex items-center md:mt-10 mt-0 justify-center">
         <Phone />
