updating with new design

--- a/src/components/MoreInfo.astro
+++ b/src/components/MoreInfo.astro
@@ -9,7 +9,7 @@
     <a
       href="/contacto"
       type="button"
-      class="bg-secondary text-white-bg font-secondary text-sm font-bold py-3 px-10 rounded-md"
+      class="bg-primary text-white-bg font-secondary text-sm font-bold py-3 px-10 rounded-md"
     >
       Contacto
     </a>
