--- a/src/components/Requirements.astro
+++ b/src/components/Requirements.astro
@@ -2,14 +2,17 @@
 import RequirementsCards from "./RequirementsCards.astro";
 ---
 
-<div class="py-10">
-  <h2
-    class="lg:text-6xl text-4xl font-extrabold font-primary uppercase text-center my-24 text-brown "
-  >
-    Requerimientos Necesarios
-  </h2>
-
-  <RequirementsCards />
-
+<div class="bg-bg-image object-center object-fill">
+  <div class="py-10">
+    <h2
+      class="lg:text-6xl text-4xl font-extrabold font-primary uppercase text-center my-24 text-brown "
+    >
+      Requerimientos Necesarios
+    </h2>
+  
+    <RequirementsCards />
+  
+  
+  </div>
 
 </div>
