--- a/src/components/RequirementsCards.astro
+++ b/src/components/RequirementsCards.astro
@@ -10,7 +10,7 @@ import Folder from "./icons/Folder.icon.astro";
 <div
   class="grid xl:grid-cols-3 md:grid-cols-2 grid-cols-1 place-items-center text-gray text-center text-lg"
 >
-  <div class="bg-white-bg p-5 mb-10 shadow-lg rounded-lg w-96 h-[220px]">
+  <div class="bg-white-bg p-5 mb-10 shadow-lg rounded-lg sm:w-96 w-82 h-[220px]">
     <div class="pb-2 flex justify-center">
       <Bank />
     </div>
@@ -19,7 +19,7 @@ import Folder from "./icons/Folder.icon.astro";
       .key ya que son necesarios para el tiembrado de los recibos.
     </p>
   </div>
-  <div class="bg-white-bg p-5 mb-10 shadow-lg rounded-lg w-96 h-[220px]">
+  <div class="bg-white-bg p-5 mb-10 shadow-lg rounded-lg sm:w-96 w-82 h-[220px]">
     <div class="py-5 flex justify-center">
       <Heart />
     </div>
@@ -28,7 +28,7 @@ import Folder from "./icons/Folder.icon.astro";
       firma digital con usuario y contraseña.
     </p>
   </div>
-  <div class="bg-white-bg p-5 mb-10 shadow-lg rounded-lg w-96 h-[220px]">
+  <div class="bg-white-bg p-5 mb-10 shadow-lg rounded-lg sm:w-96 w-82 h-[220px]">
     <div class="py-5 flex justify-center">
       <Receipt />
     </div>
@@ -37,7 +37,7 @@ import Folder from "./icons/Folder.icon.astro";
       ofrece asesoría si es necesario.
     </p>
   </div>
-  <div class="bg-white-bg p-5 mb-10 shadow-lg rounded-lg w-96 h-[220px]">
+  <div class="bg-white-bg p-5 mb-10 shadow-lg rounded-lg sm:w-96 w-82 h-[220px]">
     <div class="pb-2 flex justify-center pt-5">
       <Person />
     </div>
@@ -45,7 +45,7 @@ import Folder from "./icons/Folder.icon.astro";
       La dispersión de nómina y pago de impuestos corre por cuenta del cliente.
     </p>
   </div>
-  <div class="bg-white-bg p-5 mb-10 shadow-lg rounded-lg w-96 h-[220px]">
+  <div class="bg-white-bg p-5 mb-10 shadow-lg rounded-lg sm:w-96 w-82 h-[220px]">
     <div class="py-5 flex justify-center">
       <Pen />
     </div>
@@ -53,7 +53,7 @@ import Folder from "./icons/Folder.icon.astro";
       Firmar carta convenio con detalles del servicio.
     </p>
   </div>
-  <div class="bg-white-bg p-5 mb-10 shadow-lg rounded-lg w-96 h-[220px]">
+  <div class="bg-white-bg p-5 mb-10 shadow-lg rounded-lg sm:w-96 w-82 h-[220px]">
     <div class="py-5 flex justify-center">
       <Folder />
     </div>
