--- a/src/components/Benefits.astro
+++ b/src/components/Benefits.astro
@@ -5,7 +5,7 @@ import BenefitsTexts from "./BenefitsTexts.astro";
 <main class="py-24">
   <div class="container mx-auto">
     <h2
-      class="lg:text-6xl text-4xl font-extrabold font-primary uppercase text-center text-brown"
+      class="lg:text-6xl text-4xl font-extrabold font-primary uppercase text-center text-secondary"
     >
       Beneficios
     </h2>
@@ -13,7 +13,7 @@ import BenefitsTexts from "./BenefitsTexts.astro";
       <hr class="w-[200px] lg:w-[300px] text-gray border mt-1" />
     </div>
     <div class="flex justify-center">
-      <p class="text-center my-10 font-secondary text-gray md:text-2xl text-xl ">
+      <p class="text-center my-10 font-secondary text-black md:text-2xl text-xl ">
         Vivimos en un mundo de
         <span class="font-bold"
           >procesos cambiantes y de mercados más exigentes</span
