--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,5 +1,15 @@
 <footer class="bg-white-bg py-10">
-  <h4 class="text-gray text-4xl text-center font-primary pb-10">
-    Nomina Pymes
-  </h4>
+  <div>
+    <h4 class="text-gray text-4xl text-center font-primary pb-10">
+      Nomina Pymes
+    </h4>
+    <p class="text-center text-gray">
+      Maquila de Nómina es el servicio que te permite contar con profesionistas
+      especializados en el cálculo de la nómina
+    </p>
+  </div>
+  <div></div>
+  <div class="flex justify-center">
+    <div class="h-0.5 bg-gray md:w-1/2 w-full mt-5"></div>
+  </div>
 </footer>
