--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -1,11 +1,17 @@
 <div class="bg-hero h-[600px] bg-cover bg-center">
-  <div class="flex justify-around">
-    <h1 class=" text-white-bg font-primary font-extrabold md:text-5xl text-3xl">Nomina Pymes</h1>
+  <div class="flex justify-start sm:ml-24 ml-10 pt-5 gap-5 items-center">
+    <div>
+      <img src="./images/logo.svg" alt="logo" class=" w-14">
+    </div>
+    <div>
+      <h1 class=" text-white-bg font-primary font-extrabold md:text-3xl text-xl">Nomina Pymes</h1>
+      <span class="text-gray">Maquila de Nomina</span>
+    </div>
   </div>
   <div class="absolute top-72 md:ml-24">
     <h2 class=" text-white-bg md:text-5xl text-3xl font-extrabold">¡Cumple sin invertir!</h2>
     <div class="md:w-1/2 border-gray border-l-2">
-      <p class="text-white-bg md:text-xl mt-5  pl-5">Maquila de Nómina es el servicio que te permite contar con profesionistas especializados en el cálculo de la nómina, la determinación de impuestos y los derivados de ella, con la confianza que la información que se le proporciona en veraz y oportuna.</p>
+      <p class="text-white-bg md:text-xl mt-5 pl-5 font-bold">Maquila de Nómina es el servicio que te permite contar con profesionistas especializados en el cálculo de la nómina, la determinación de impuestos y los derivados de ella, con la confianza que la información que se le proporciona en veraz y oportuna.</p>
     </div>
   </div>
 </div>
