--- a/src/pages/contacto.astro
+++ b/src/pages/contacto.astro
@@ -1,34 +1,53 @@
 ---
-import Phone from "../components/icons/Phone.icon.astro";
+import { Image } from "astro:assets";
 import Layout from "../layouts/Layout.astro";
+import Footer from "../components/Footer.astro";
 ---
 
 <Layout
   title="Contacto"
   description="Contáctanos para obtener asesoría experta en nómina, cálculo de impuestos y más. Estamos aquí para ayudarte a optimizar tu negocio con soluciones personalizadas"
 >
-  <div class="container mx-auto bg-white-bg rounded shadow-lg">
-    <div class="absolute mt-14 ml-16 font-secondary">
-      <a type="button" href="/"> Regresar </a>
-    </div>
-    <div class="my-32 pt-32">
-      <h1
-        class="md:text-6xl text-3xl text-center font-extrabold font-primary uppercase"
-      >
-        Nomina Pymes
-      </h1>
-      <hr class="border-2 border-gray lg:w-1/3 w-3/4 mx-auto" />
-      <p class="text-secondary text-2xl text-center">Datos de contacto</p>
-    </div>
-    <div class="md:flex justify-center gap-72 pb-32">
-      <div class="border-l-4 border-l-secondary lg:text-3xl text-2xl">
-        <p class="pl-5 my-7">Nancy Garza</p>
-        <p class="pl-5 mb-7">nominapymes@gmail.com</p>
-        <p class="pl-5 mb-7">+52 811326-7251</p>
+
+  <div class="flex justify-start sm:ml-24 ml-10 pt-5 gap-5 items-center">
+    <a class="cursor-pointer" href="/">
+      <Image
+        src="/images/fullLogoColor.svg"
+        class="md:w-[400px] w-[300px]"
+        alt="logo"
+        width="400"
+        height="400"
+      />
+    </a>
+  </div>
+  
+  <div class="h-0.5 bg-white-bg w-full mt-5" />
+
+  <div class="container mx-auto bg-primary rounded shadow-lg mt-40 mb-20">
+    <a href="/" class="text-xl border border-white-bg cursor-pointer p-2 rounded absolute text-white-bg mt-10 ml-14">
+      Regresar
+    </a>
+    <div
+      class="flex md:flex-row flex-col justify-around items-center gap-10 py-48"
+    >
+      <div class="text-white-bg font-primary">
+        <h1 class="text-6xl font-extrabold mb-8">Contacto</h1>
+        <div class="flex flex-col gap-3">
+          <p class="text-2xl">Nancy Garza</p>
+          <p class="text-2xl">nominapymes@gmail.com</p>
+          <p class="text-2xl">+52 811326-7651</p>
+        </div>
       </div>
-      <div class="flex items-center md:mt-10 mt-0 justify-center">
-        <Phone />
+      <div>
+        <Image
+          src="/images/fullLogo.svg"
+          alt="Contacto"
+          class="rounded-lg md:w-[500px] w-[300px] md:pt-0 pt-10"
+          width="500"
+          height="500"
+        />
       </div>
     </div>
   </div>
+  <Footer />
 </Layout>
