--- a/src/pages/contacto.astro
+++ b/src/pages/contacto.astro
@@ -24,13 +24,14 @@ import Footer from "../components/Footer.astro";
   <div class="h-0.5 bg-white-bg w-full mt-5" />
 
   <div class="container mx-auto bg-primary rounded shadow-lg mt-40 mb-20">
-    <a href="/" class="text-xl border border-white-bg cursor-pointer p-2 rounded absolute text-white-bg mt-10 ml-14">
-      Regresar
-    </a>
+    
     <div
       class="flex md:flex-row flex-col justify-around items-center gap-10 py-48"
     >
       <div class="text-white-bg font-primary">
+        <a href="/" class="text-xl border border-white-bg cursor-pointer p-2 rounded absolute text-white-bg -mt-28">
+          Regresar
+        </a>
         <h1 class="text-6xl font-extrabold mb-8">Contacto</h1>
         <div class="flex flex-col gap-3">
           <p class="text-2xl">Nancy Garza</p>
