--- a/src/components/Benefits.astro
+++ b/src/components/Benefits.astro
@@ -26,8 +26,8 @@ import BenefitsTexts from "./BenefitsTexts.astro";
     <div class="my-10 container mx-auto flex justify-center font-primary">
       <h3 class="text-center md:text-5xl text-2xl py-4">
         Si estás pensando en <span class="text-primary"
-          >adquirir este servicio para su empresa</span
-        >, esto serian algunos de los beneficios que obtendrá:
+          >adquirir este servicio para tu empresa</span
+        >, estos son algunos beneficios que obtendrás:
       </h3>
 
     </div>
