--- a/src/components/BenefitsTexts.astro
+++ b/src/components/BenefitsTexts.astro
@@ -14,7 +14,7 @@ const benefits: Benefit[] = [
   {
     id: 2,
     message:
-      "Personal especializado a precio accesible en materia de RH y laboral.",
+      "Personal especializado en material de RH, Compensación y Laboral a precios accesibles.",
   },
   {
     id: 3,
