adding required changes

--- a/src/components/BenefitsTexts.astro
+++ b/src/components/BenefitsTexts.astro
@@ -24,7 +24,7 @@ const benefits: Benefit[] = [
   {
     id: 4,
     message:
-      "Ahorro en multas, recargas y actualizaciones por malos cálculos o errores.",
+      "Ahorro en multas, recargos y actualizaciones….",
   },
   {
     id: 5,
