--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,8 +1,15 @@
+---
+import { Image } from "astro:assets";
+---
+
 <footer class="bg-white-bg py-10">
   <div>
-    <h4 class="text-gray text-4xl text-center font-primary pb-10">
-      Nomina Pymes
-    </h4>
+    <Image
+      class="mx-auto pb-10"
+      src="/images/fullLogoColor.svg"
+      alt="Logo"
+      width="400"
+      height="400" />
     <p class="text-center text-gray">
       Maquila de Nómina es el servicio que te permite contar con profesionistas
       especializados en el cálculo de la nómina
