--- a/src/components/BenefitsTexts.astro
+++ b/src/components/BenefitsTexts.astro
@@ -14,7 +14,7 @@ const benefits: Benefit[] = [
   {
     id: 2,
     message:
-      "Personal especializado en material de RH, Compensación y Laboral a precios accesibles.",
+      "Personal especializado en materia de RH, Compensación y Laboral, a pecios accesibles.",
   },
   {
     id: 3,
@@ -39,6 +39,10 @@ const benefits: Benefit[] = [
     message:
       "Información detallada en reportes por área, centro y departamento.",
   },
+  {
+    id: 8,
+    message: "Soluciones para la atracción de talento, capacitación, compensación y laboral."
+  }
 ];
 ---
 
