--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -11,7 +11,7 @@
   <div class="absolute top-72 md:ml-24">
     <h2 class=" text-white-bg md:text-5xl text-3xl font-extrabold">¡Cumple sin invertir!</h2>
     <div class="md:w-1/2 border-gray border-l-2">
-      <p class="text-white-bg md:text-xl mt-5 pl-5 font-bold">Maquila de Nómina es el servicio que te permite contar con profesionistas especializados en el cálculo de la nómina, la determinación de impuestos y los derivados de ella, con la confianza que la información que se le proporciona en veraz y oportuna.</p>
+      <p class="text-white-bg md:text-xl mt-5 pl-5 font-bold">Nuestra maquila de nómina es un servicio que ofrece la experiencia de profesionales en el cálculo de salarios, la gestión de impuestos y otros aspectos relacionados, garantizando la veracidad y puntualidad de la información proporcionada.</p>
     </div>
   </div>
 </div>
