--- a/src/components/RequirementsCards.astro
+++ b/src/components/RequirementsCards.astro
@@ -15,8 +15,7 @@ import Folder from "./icons/Folder.icon.astro";
       <Bank />
     </div>
     <p class="">
-      Entregar firmas digitales de IMSS y SAT con usuario y contraseña, archivos
-      .key ya que son necesarios para el tiembrado de los recibos.
+      Entregar firmas digitales de IMSS y SAT, usuarios, contraseñas y archivos .key, ya que son necesarios para el correcto timbrado de los recibos de nómina.
     </p>
   </div>
   <div class="bg-white-bg p-5 mb-10 shadow-lg rounded-lg sm:w-96 w-82 h-[220px]">
