--- a/src/components/Services.astro
+++ b/src/components/Services.astro
@@ -20,9 +20,9 @@ import LighBulb from "./icons/LightBulb.icon.astro";
         </div>
         <p class="text-white-bg text-center text-lg">
           <span class="font-bold text-secondary">
-            Cuando te has dado cuenta que es menor</span
+            Cuando es menor el costo</span
           >
-          el costo de contratar a un tercero que implementar un departamento de nomina
+          de contratar un tercero que implementar un departamento ºde nómina.
         </p>
       </div>
       <div class="bg-primary p-5 shadow-lg rounded-lg sm:w-96 w-82 h-[220px]">
@@ -30,11 +30,11 @@ import LighBulb from "./icons/LightBulb.icon.astro";
           <Bell />
         </div>
         <p class="text-white-bg text-center text-lg">
-          Si has sido requerido por
+          Cuando quieres evitar ser requerido por
           <span class="font-bold text-secondary"
             >diferencias ante el IMSS, INFONAVIT</span
           >
-          y dependencias locales por impuestos sobre nómina
+          y otras dependencias relacionadas con los impuestos sobre la nómina.
         </p>
       </div>
     </div>
@@ -46,7 +46,7 @@ import LighBulb from "./icons/LightBulb.icon.astro";
           <Search />
         </div>
         <p class="text-white-bg text-center text-lg">
-          Cuando no cuentas con la plataforma o infraestructura adecuada para el
+          Cuando necesitas invertir en un plataforma o infraestructura adecuada para el 
           <span class="font-bold text-secondary"
             >cálculo y administración
           </span>
