--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -8,6 +8,7 @@ import Requirements from "../components/Requirements.astro";
 import MoreInfo from "../components/MoreInfo.astro";
 import Footer from "../components/Footer.astro";
 import Hero from "../components/Hero.astro";
+import ContactButton from "../components/ContactButton.astro";
 ---
 
 <Layout
@@ -21,4 +22,5 @@ import Hero from "../components/Hero.astro";
   <Requirements />
   <MoreInfo />
   <Footer />
+  <ContactButton />
 </Layout>
