--- a/src/components/ContactButton.astro
+++ b/src/components/ContactButton.astro
@@ -4,7 +4,7 @@ import { Image } from "astro:assets";
 
 ---
 
-<a href="/contacto" class=" text-xl bg-[#25D366] rounded py-3 px-5 text-white-bg fixed bottom-4 right-4 flex items-center">
+<a target="_blank" href="https://wa.me/+528113267651" class=" text-xl bg-[#25D366] rounded py-3 px-5 text-white-bg fixed bottom-4 right-4 flex items-center">
   <Image src="/images/wha.svg" alt="whatsapp" height={25} width={25} class="w-6 h-6 inline-block mr-2 text-white-bg" />
   Contacto
 </a>
