phone number changed

--- a/src/pages/contacto.astro
+++ b/src/pages/contacto.astro
@@ -36,7 +36,7 @@ import Footer from "../components/Footer.astro";
         <div class="flex flex-col gap-3">
           <p class="text-2xl">Nancy Garza</p>
           <p class="text-2xl">nominapymes@gmail.com</p>
-          <p class="text-2xl">+52 811326-7651</p>
+          <p class="text-2xl">+52 1 81 8010 2291</p>
         </div>
       </div>
       <div>
