--- a/src/components/BenefitsTexts.astro
+++ b/src/components/BenefitsTexts.astro
@@ -41,8 +41,13 @@ const benefits: Benefit[] = [
   },
   {
     id: 8,
-    message: "Soluciones para la atracción de talento, capacitación, compensación y laboral."
-  }
+    message:
+      "Soluciones para la atracción de talento, capacitación, compensación y laboral.",
+  },
+  {
+    id: 9,
+    message: "REPSE (registro, renovación y declaraciones)",
+  },
 ];
 ---
 
